# BoyerMoore

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
